--- a/app/views/terminology_converter/process_form.html.erb
+++ b/app/views/terminology_converter/process_form.html.erb
@@ -1,5 +1,5 @@
 <!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Request New Build</button>
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Request New Build</button>
 
 <h1>Jenkins Build Dashboard</h1>
 <!-- Jenkins build job ag-grid div -->
