--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,9 +14,15 @@
       <% end %>
       <li><a href="<%= prisme_job_queue_list_path %>" onclick="polling.checkPolling('job_queue');">Job Queue Listing</a></li>
       <% if policy(:navigation).admin? %>
-          <li><a href="<%= services_path %>" onclick="polling.checkPolling('deployer');">Service Provisioning</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administration <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="<%= admin_user_edit_list_path %>" onclick="polling.checkPolling('admin_user_edit');">Edit User Permissions</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="<%= services_path %>" onclick="polling.checkPolling('deployer');">Service Provisioning</a></li>
+            </ul>
+          </li>
       <% end %>
-
       <li>
         <% if current_user.nil? %>
             <a href="<%= new_user_session_path %>" onclick="polling.checkPolling('logIn');">Log in</a>
