--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -27,5 +27,5 @@
     <% end %>
 <% end %>
 <hr>
-<%= link_to 'Edit', edit_service_path(@service), class: 'btn btn-primary' %>
-<%= link_to 'List', services_path, class: 'btn btn-primary' %>
+<%= link_to 'Edit', edit_service_path(@service), class: 'btn btn-primary btn-lg' %>
+<%= link_to 'List', services_path, class: 'btn btn-primary btn-lg' %>
