--- a/app/views/welcome/_app_deployment_table.html.erb
+++ b/app/views/welcome/_app_deployment_table.html.erb
@@ -1,13 +1,14 @@
 <div id="<%= deployment[:service_id] %>">
+  <br>
   <h4>Service Name:&nbsp;&nbsp;<%= deployment[:service_name] %></h4>
-  <table class="table data-table table-striped table-hover">
+  <table class="prisme-table table-striped table-hover">
     <thead>
     <tr>
-      <td>Application</td>
-      <td>State</td>
-      <td>Session Count</td>
-      <td>Version</td>
-      <td>Actions (Start/Stop/Undeploy)</td>
+      <th width="50%">Application</th>
+      <th width="10%">State</th>
+      <th width="10%">Session Count</th>
+      <th width="10%">Version</th>
+      <th width="20%">Actions (Start/Stop/Undeploy)</th>
     </tr>
     </thead>
     <tbody>
