--- a/app/views/roles/get_roles.html.erb
+++ b/app/views/roles/get_roles.html.erb
@@ -1,5 +1,6 @@
 <h1>Roles by user</h1>
-<p>The roles for user <%=@user_id%></p>
+<p>The roles for user <%=@user_id%>:</p>
 <%@roles_array.each do |role|%>
   <li><%=role.name%></li>
 <%end%>
+<p> The user was authenticated = <%=@authenticated.to_s %></p>
