bug fixes with admin user edit javascript calls; added bootbox.js for alert, prompt, and confirm messages; validations with regard to setting administrator and super user roles

--- a/app/views/_ajax_flash.js.erb
+++ b/app/views/_ajax_flash.js.erb
@@ -20,3 +20,7 @@
 <% if session.has_key?(:ajax_flash) %>
   <% session[:ajax_flash] = nil %>
 <% end %>
+
+function ajax_flash(options, settings) {
+  $.notify(options, settings);
+}
