--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
  *
  * require jquery.smartWizard/smart_wizard
  *= require jquery.steps-1.1.0/jquery.steps
- *= require ag-grid
+ * require ag-grid
  *= require jquery-ui
  * this is for styling of the ajax_flash notification code
  *= require animate
